---------------------------------------------------------------------------------------------------
Version: 0.7.11
Date: 2023-04-10
  Fixes:
    - Double furnace: fixed to work with double furnace again (broken in 7.10)
  Changes:
    - Trees will spawn less often on resources.
---------------------------------------------------------------------------------------------------
Version: 0.7.10
Date: 2023-03-25
  Fixes:
    - Compatibility improvements with James' oil processing buildings, etc.
---------------------------------------------------------------------------------------------------
Version: 0.7.9
Date: 2023-03-06
  Features:
    - K2: Add setting to choose between default mineral water and water for mining fluid
---------------------------------------------------------------------------------------------------
Version: 0.7.8
Date: 2023-02-12
  Changes:
    - Crafting efficiency improvements, thanks to nihilistzsche
    - SE: Optional tungsten powder for sintering can use productivity modules
---------------------------------------------------------------------------------------------------
Version: 0.7.7
Date: 2023-01-17
  Features:
    - (Beta) Crafting Efficiency compatibility
  Localization:
    - ru updates thanks to CV514
---------------------------------------------------------------------------------------------------
Version: 0.7.6
Date: 2022-12-24
  Fixes:
    - Prod mod compatibility with K2+GDIW etc
    - Fix mod load error with AAI-Industry + Bob Metals + Tungsten
  Localization:
    - de updates thanks to NathanU
    - ja updates thanks to Sakuro
    - zh thanks to sunnytan53
  Changes:
    - SE ingot in delivery cannon
---------------------------------------------------------------------------------------------------
Version: 0.7.5
Date: 2022-11-20
  Fixes:
    - K2: Compatibility fix for 1.3.7+
---------------------------------------------------------------------------------------------------
Version: 0.7.4
Date: 2022-08-17
  Fixes: